--- a/KleskaProjektBackend/KleskaProject.Application/KleskaProject - Backup.Application.csproj
+++ b/KleskaProjektBackend/KleskaProject.Application/KleskaProject - Backup.Application.csproj
@@ -1,9 +1,10 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>net8.0</TargetFramework>
+      <LangVersion>13.0</LangVersion>
+      <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
-    <ImplicitUsings>enable</ImplicitUsings>
   </PropertyGroup>
 
 </Project>
