FEAT(11-walidacja-sesji-użytkownika-be): Added AuthService with user actions

--- a/KleskaProjektBackend/KleskaProject.Application/KleskaProject.Application.csproj
+++ b/KleskaProjektBackend/KleskaProject.Application/KleskaProject.Application.csproj
@@ -2,9 +2,15 @@
 
   <PropertyGroup>
     <TargetFramework>net8.0</TargetFramework>
-      <LangVersion>13.0</LangVersion>
+      <LangVersion>latest</LangVersion>
       <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
   </PropertyGroup>
+
+  <ItemGroup>
+    <Folder Include="Commands\" />
+    <Folder Include="EventHandlers\" />
+    <Folder Include="Queries\" />
+  </ItemGroup>
 
 </Project>
