--- a/KleskaProjektBackend/KleskaProject.API/KleskaProject.API.csproj
+++ b/KleskaProjektBackend/KleskaProject.API/KleskaProject.API.csproj
@@ -1,13 +1,12 @@
-﻿<Project Sdk="Microsoft.NET.Sdk.Web">
+<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>net8.0</TargetFramework>
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
-      <LangVersion>latest</LangVersion>
-      <UserSecretsId>35893380-db23-4a21-b181-15d8d2553bcf</UserSecretsId>
-      <DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
-      <DockerComposeProjectPath>..\docker-compose.dcproj</DockerComposeProjectPath>
+    <UserSecretsId>ee71ab95-e6f0-4446-8ff8-156e6d7889e5</UserSecretsId>
+    <DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
+    <DockerComposeProjectPath>..\docker-compose.dcproj</DockerComposeProjectPath>
   </PropertyGroup>
 
   <ItemGroup>
@@ -17,7 +16,9 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\KleskaProject.Application\KleskaProject.Application.csproj" />
     <ProjectReference Include="..\KleskaProject.Domain\KleskaProject.Domain.csproj" />
+    <ProjectReference Include="..\KleskaProjekt.Infrastructure\KleskaProjekt.Infrastructure.csproj" />
   </ItemGroup>
 
 </Project>
