--- a/KleskaProjektBackend/KleskaProject.Domain/KleskaProject.Domain.csproj
+++ b/KleskaProjektBackend/KleskaProject.Domain/KleskaProject.Domain.csproj
@@ -4,15 +4,15 @@
     <TargetFramework>net8.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
-      <LangVersion>13.0</LangVersion>
+      <LangVersion>latest</LangVersion>
   </PropertyGroup>
 
   <ItemGroup>
-    <Folder Include="Common\Errors\" />
-    <Folder Include="Entities\" />
     <Folder Include="Exceptions\" />
     <Folder Include="Enums\" />
-    <Folder Include="ValueObjects\" />
   </ItemGroup>
 
+	<ItemGroup>
+		<ProjectReference Include="..\KleskaProjekt.Infrastructure\KleskaProjekt.Infrastructure.csproj" />
+	</ItemGroup>
 </Project>
