FEAT(11-walidacja-sesji-użytkownika-be): Added DB config and corrected DTO

--- a/KleskaProjektBackend/docker-compose.yml
+++ b/KleskaProjektBackend/docker-compose.yml
@@ -9,3 +9,22 @@ services:
     ports:
       - "8080:8080" # HTTP
       - "8081:8081" # HTTPS
+    environment:
+      - ASPNETCORE_ENVIRONMENT=Development
+      - ConnectionStrings__DefaultConnection=Host=postgres;Port=5432;Database=kleskadatabase;Username=postgres;Password=postgres
+    depends_on:
+      - postgres
+
+  postgres:
+    image: postgres:13
+    environment:
+      POSTGRES_USER: postgres
+      POSTGRES_PASSWORD: postgres
+      POSTGRES_DB: kleskadatabase
+    ports:
+      - "5432:5432"
+    volumes:
+      - postgres_data:/var/lib/postgresql/data  
+
+volumes:
+  postgres_data:
