--- a/KleskaProjektBackend/KleskaProject.Application/KleskaProject.Application.csproj
+++ b/KleskaProjektBackend/KleskaProject.Application/KleskaProject.Application.csproj
@@ -8,9 +8,14 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Folder Include="Commands\" />
-    <Folder Include="EventHandlers\" />
-    <Folder Include="Queries\" />
+    <PackageReference Include="MediatR" Version="12.4.1" />
+    <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="8.0.2" />
+    <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="8.1.2" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\KleskaProject.Domain\KleskaProject.Domain.csproj" />
+    <ProjectReference Include="..\KleskaProjekt.Infrastructure\KleskaProjekt.Infrastructure.csproj" />
   </ItemGroup>
 
 </Project>
