--- a/KleskaProjektBackend/KleskaProject.Domain/KleskaProject.Domain.csproj
+++ b/KleskaProjektBackend/KleskaProject.Domain/KleskaProject.Domain.csproj
@@ -12,7 +12,7 @@
     <Folder Include="Enums\" />
   </ItemGroup>
 
-	<ItemGroup>
-		<ProjectReference Include="..\KleskaProjekt.Infrastructure\KleskaProjekt.Infrastructure.csproj" />
-	</ItemGroup>
+  <ItemGroup>
+    <PackageReference Include="BCrypt.Net-Next" Version="4.0.3" />
+  </ItemGroup>
 </Project>
