--- a/KleskaProjektBackend/launchSettings.json
+++ b/KleskaProjektBackend/launchSettings.json
@@ -1,11 +1,12 @@
 {
   "profiles": {
-    "Docker Compose": {
-      "commandName": "DockerCompose",
-      "commandVersion": "1.0",
-      "serviceActions": {
-        "kleskaprojekt.api": "StartDebugging",
-        "kleskaproject.api": "StartDebugging"
+    "KleskaProject.API": {
+      "commandName": "Project",
+      "dotnetRunMessages": true,
+      "launchBrowser": true,
+      "applicationUrl": "http://0.0.0.0:8080;https://0.0.0.0:8081",
+      "environmentVariables": {
+        "ASPNETCORE_ENVIRONMENT": "Development"
       }
     }
   }
