--- a/KleskaProjektBackend/KleskaProject.API/Dockerfile
+++ b/KleskaProjektBackend/KleskaProject.API/Dockerfile
@@ -12,11 +12,21 @@ WORKDIR /src
 COPY ["KleskaProject.API/KleskaProject.API.csproj", "KleskaProject.API/"]
 COPY ["KleskaProject.Application/KleskaProject.Application.csproj", "KleskaProject.Application/"]
 COPY ["KleskaProject.Domain/KleskaProject.Domain.csproj", "KleskaProject.Domain/"]
-COPY ["KleskaProjekt.Infrastructure/KleskaProjekt.Infrastructure.csproj", "KleskaProjekt.Infrastructure/"]
+COPY ["KleskaProject.Infrastructure/KleskaProject.Infrastructure.csproj", "KleskaProject.Infrastructure/"]
 RUN dotnet restore "./KleskaProject.API/KleskaProject.API.csproj"
 COPY . .
 WORKDIR "/src/KleskaProject.API"
 RUN dotnet build "./KleskaProject.API.csproj" -c $BUILD_CONFIGURATION -o /app/build
+
+WORKDIR /tests
+COPY ["Application.UnitTests/Application.UnitTests.csproj", "Application.UnitTests/"]
+COPY ["Domain.UnitTests/Domain.UnitTests.csproj", "Domain.UnitTests/"]
+COPY . .
+RUN dotnet restore "./Application.UnitTests/Application.UnitTests.csproj"
+RUN dotnet restore "./Domain.UnitTests/Domain.UnitTests.csproj"
+
+RUN dotnet test "Application.UnitTests/Application.UnitTests.csproj" --no-restore --configuration $BUILD_CONFIGURATION -v quiet
+RUN dotnet test "Domain.UnitTests/Domain.UnitTests.csproj" --no-restore --configuration $BUILD_CONFIGURATION -v quiet
 
 FROM build AS publish
 ARG BUILD_CONFIGURATION=Release
