--- a/KleskaProjektBackend/KleskaProject.API/KleskaProject.API.csproj
+++ b/KleskaProjektBackend/KleskaProject.API/KleskaProject.API.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>net8.0</TargetFramework>
@@ -11,15 +11,17 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="8.0.5" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="8.0.10" />
     <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.20.1" />
     <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="8.0.10" />
+	<PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="8.0.0" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.4.0" />
   </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\KleskaProject.Application\KleskaProject.Application.csproj" />
     <ProjectReference Include="..\KleskaProject.Domain\KleskaProject.Domain.csproj" />
-    <ProjectReference Include="..\KleskaProjekt.Infrastructure\KleskaProjekt.Infrastructure.csproj" />
+    <ProjectReference Include="..\KleskaProject.Infrastructure\KleskaProject.Infrastructure.csproj" />
   </ItemGroup>
 
 </Project>
