--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,7 @@
     "@ant-design/icons": "^5.5.1",
     "@popperjs/core": "^2.11.8",
     "antd": "^5.21.5",
+    "axios": "^1.7.7",
     "bootstrap": "^5.3.3",
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.5",
